# ParallelProgramming

./: .gitignore
Count of symbol in string/: readme.md
Find of briges in graf/: README.md
Level set segmentation/: .gitignore  CMakeLists.txt  README.md  main.cpp  parallel.cpp
Level set segmentation/include/: mouse.h
Level set segmentation/src/: CMakeLists.txt  level.cpp  mouse.cpp
Rabin–Karp algorithm/: CMakeLists.txt  README.md
Readers-Writers/: README.md
Tests/: Dirichlet.cpp  README.md  integral.cpp  mat-mat.cpp  mat-vect.cpp
lab1/: Source.cpp  book.txt  readme.md
lab2/: main.cpp  semaphore.h
lab3/: main.cpp
